--- a/public/home.html
+++ b/public/home.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="big-bold-text">
-        El que cierre la ventana es gei 
+        ideas futuras... 
     </div>
     <div class="small-bold-text  text-center">
         terminos y condiciones
