--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="https://res.cloudinary.com/ultragroup/image/upload/nyunomvmxsqsbbgsnxri" class="h-8" alt="Logo">
-            <span class="self-center text-s font-semibold whitespace-nowrap dark:text-white">Text-Diff-App</span>
+            <span class="self-center text-s font-semibold whitespace-nowrap dark:text-white">Comparador.</span>
         </a>
         
         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
