--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="https://res.cloudinary.com/ultragroup/image/upload/nyunomvmxsqsbbgsnxri" class="h-8" alt="Logo">
-            <span class="self-center text-s font-semibold whitespace-nowrap dark:text-white">Comparador.</span>
+            <img src="assets/logo-flare.svg" class="h-8" alt="Logo">
+            <span class="self-center text-s font-semibold whitespace-nowrap dark:text-white">Comparador de texto</span>
         </a>
         
         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
